--- a/Apple_24_Zones/packages.config
+++ b/Apple_24_Zones/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EasyModbusTCP" version="5.6.0" targetFramework="net472" />
   <package id="FontAwesome.Sharp" version="6.3.0" targetFramework="net472" />
 </packages>
