--- a/Apple_24_Zones/Apple_24_Zones.csproj
+++ b/Apple_24_Zones/Apple_24_Zones.csproj
@@ -84,6 +84,12 @@
     <Compile Include="Forms\FrmMain.Designer.cs">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FrmPanelExample.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmPanelExample.Designer.cs">
+      <DependentUpon>FrmPanelExample.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FrmPopup.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -104,6 +110,9 @@
     <EmbeddedResource Include="Forms\FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FrmPanelExample.resx">
+      <DependentUpon>FrmPanelExample.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmPopup.resx">
       <DependentUpon>FrmPopup.cs</DependentUpon>
