--- a/Apple_24_Zones/Apple_24_Zones.csproj
+++ b/Apple_24_Zones/Apple_24_Zones.csproj
@@ -165,6 +165,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Icon.ico" />
+    <None Include="Resources\arrowDown.png" />
+    <None Include="Resources\arrowUp.png" />
     <Content Include="Resources\Icon.ico" />
     <None Include="Resources\MIDORI OFICIAL2 ORANGE.png" />
     <None Include="Resources\MIDORI OFICIAL2.png" />
