--- a/Apple_24_Zones/Apple_24_Zones.csproj
+++ b/Apple_24_Zones/Apple_24_Zones.csproj
@@ -91,6 +91,12 @@
     <Compile Include="Forms\FrmPanelExample.Designer.cs">
       <DependentUpon>FrmPanelExample.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FrmPID.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmPID.Designer.cs">
+      <DependentUpon>FrmPID.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\FrmInformation.resx">
@@ -108,6 +114,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmPanelExample.resx">
       <DependentUpon>FrmPanelExample.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FrmPID.resx">
+      <DependentUpon>FrmPID.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
