Changes by WARNER 09/08/2023 morning

--- a/Apple_24_Zones/Apple_24_Zones.csproj
+++ b/Apple_24_Zones/Apple_24_Zones.csproj
@@ -165,6 +165,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Icon.ico" />
+    <None Include="Resources\neutroWhite.png" />
+    <None Include="Resources\neutroYellow.png" />
     <None Include="Resources\ledRectangleOn.png" />
     <None Include="Resources\ledRectangleOff.png" />
     <None Include="Resources\MIDORI LOGO ICON VERDE.png" />
@@ -173,6 +175,9 @@
     <None Include="Resources\arrowUpRed.png" />
     <None Include="Resources\arrowDownBlue.png" />
     <None Include="Resources\coming-soon.jpg" />
+    <None Include="Resources\arrowDownBlue2.png" />
+    <None Include="Resources\arrowUpRed2.png" />
+    <None Include="Resources\arrowUpRed21.png" />
     <Content Include="Resources\Icon.ico" />
     <None Include="Resources\MIDORI OFICIAL2 ORANGE.png" />
     <None Include="Resources\MIDORI OFICIAL2.png" />
