--- a/Apple_24_Zones/Apple_24_Zones.csproj
+++ b/Apple_24_Zones/Apple_24_Zones.csproj
@@ -182,6 +182,9 @@
     <None Include="Resources\draw1and2.png" />
     <None Include="Resources\draw2.png" />
     <None Include="Resources\drawOff.png" />
+    <None Include="Resources\draw11.png" />
+    <None Include="Resources\draw21.png" />
+    <None Include="Resources\drawOff1.png" />
     <Content Include="Resources\Icon.ico" />
     <None Include="Resources\MIDORI OFICIAL2 ORANGE.png" />
     <None Include="Resources\MIDORI OFICIAL2.png" />
