--- a/Apple_24_Zones/Apple_24_Zones.csproj
+++ b/Apple_24_Zones/Apple_24_Zones.csproj
@@ -40,9 +40,6 @@
     <Reference Include="CrystalDecisions.ReportSource, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="CrystalDecisions.Shared, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="CrystalDecisions.Windows.Forms, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
-    <Reference Include="EasyModbus, Version=5.6.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\EasyModbusTCP.5.6.0\lib\net40\EasyModbus.dll</HintPath>
-    </Reference>
     <Reference Include="FontAwesome.Sharp, Version=6.3.0.0, Culture=neutral, PublicKeyToken=d16d1e4e568ec10f, processorArchitecture=MSIL">
       <HintPath>..\packages\FontAwesome.Sharp.6.3.0\lib\net472\FontAwesome.Sharp.dll</HintPath>
     </Reference>
@@ -190,6 +187,17 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Icon.ico" />
+    <None Include="Resources\LedBlueCooling2.png" />
+    <None Include="Resources\LedRedHeating2.png" />
+    <None Include="Resources\STOP.png" />
+    <None Include="Resources\upArrowHover.png" />
+    <None Include="Resources\upArrow.png" />
+    <None Include="Resources\LedWhite1.png" />
+    <None Include="Resources\LedRedHeating1.png" />
+    <None Include="Resources\LedBlueCooling1.png" />
+    <None Include="Resources\LedWhite.png" />
+    <None Include="Resources\LedRedHeating.png" />
+    <None Include="Resources\LedBlueCooling.png" />
     <None Include="Resources\neutroWhite.png" />
     <None Include="Resources\neutroYellow.png" />
     <None Include="Resources\ledRectangleOn.png" />
@@ -210,6 +218,10 @@
     <None Include="Resources\draw11.png" />
     <None Include="Resources\draw21.png" />
     <None Include="Resources\drawOff1.png" />
+    <None Include="Resources\downArrow.png" />
+    <None Include="Resources\downArrowHover.png" />
+    <None Include="Resources\bracket.png" />
+    <None Include="Resources\bracket2.png" />
     <Content Include="Resources\Icon.ico" />
     <None Include="Resources\MIDORI OFICIAL2 ORANGE.png" />
     <None Include="Resources\MIDORI OFICIAL2.png" />
