Report functionality added

--- a/Apple_24_Zones/Properties/Settings.settings
+++ b/Apple_24_Zones/Properties/Settings.settings
@@ -2,14 +2,20 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Apple_24_Zones.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="CountHeat" Type="System.Int32" Scope="User">
+    <Setting Name="CountHeat1" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="CountCool" Type="System.Int32" Scope="User">
+    <Setting Name="CountCool1" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="Notes" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="CountCool2" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="CountHeat2" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
     </Setting>
   </Settings>
 </SettingsFile>
