--- a/Apple_24_Zones/Apple_24_Zones.csproj
+++ b/Apple_24_Zones/Apple_24_Zones.csproj
@@ -83,6 +83,12 @@
     <Compile Include="Forms\FrmInformation.Designer.cs">
       <DependentUpon>FrmInformation.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FrmMessageAlertChiller.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmMessageAlertChiller.Designer.cs">
+      <DependentUpon>FrmMessageAlertChiller.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FrmModbus.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -125,6 +131,9 @@
     <None Include="Resources\STOP2.png" />
     <EmbeddedResource Include="Forms\FrmInformation.resx">
       <DependentUpon>FrmInformation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FrmMessageAlertChiller.resx">
+      <DependentUpon>FrmMessageAlertChiller.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmModbus.resx">
       <DependentUpon>FrmModbus.cs</DependentUpon>
@@ -238,6 +247,8 @@
     <None Include="Resources\downArrowHover.png" />
     <None Include="Resources\bracket.png" />
     <None Include="Resources\bracket2.png" />
+    <None Include="Resources\Alert.png" />
+    <None Include="Resources\Alert1.png" />
     <Content Include="Resources\Icon.ico" />
     <None Include="Resources\MIDORI OFICIAL2 ORANGE.png" />
     <None Include="Resources\MIDORI OFICIAL2.png" />
