GUI Offset Done

--- a/Apple_24_Zones/App.config
+++ b/Apple_24_Zones/App.config
@@ -109,6 +109,90 @@
             <setting name="Offset135_140" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="Off2set0_5" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Off2set5_10" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Off2set10_15" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Off2set15_20" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Off2set20_25" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Off2set25_30" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Off2set30_35" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Off2set35_40" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Off2set40_45" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Off2set45_50" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Off2set50_55" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Off2set55_60" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Off2set60_65" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Off2set65_70" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Off2set70_75" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Off2set75_80" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Off2set80_85" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Off2set85_90" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Off2set90_95" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Off2set95_100" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Off2set100_105" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Off2set105_110" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Off2set110_115" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Off2set115_120" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Off2set120_125" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Off2set125_130" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Off2set130_135" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Off2set135_140" serializeAs="String">
+                <value>0</value>
+            </setting>
         </Apple_24_Zones.Properties.Settings>
     </userSettings>
 </configuration>
