--- a/Apple_24_Zones/Properties/Settings.settings
+++ b/Apple_24_Zones/Properties/Settings.settings
@@ -185,5 +185,8 @@
     <Setting Name="Off2set135_140" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="LogCreateTimes" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
