Optimización de Ocultar/Mostrar Original Inputs & Fixed error when skip security panel

--- a/Apple_24_Zones/App.config
+++ b/Apple_24_Zones/App.config
@@ -196,10 +196,7 @@
             <setting name="LogCreateTimes" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="ShowZone1Original" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="ShowZone2Original" serializeAs="String">
+            <setting name="ShowOInputs" serializeAs="String">
                 <value>False</value>
             </setting>
         </Apple_24_Zones.Properties.Settings>
