--- a/Apple_24_Zones/Apple_24_Zones.csproj
+++ b/Apple_24_Zones/Apple_24_Zones.csproj
@@ -131,6 +131,12 @@
     <Compile Include="Forms\FrmPanelExample.Designer.cs">
       <DependentUpon>FrmPanelExample.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FrmYScales.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmYScales.Designer.cs">
+      <DependentUpon>FrmYScales.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <None Include="Properties\app.manifest" />
@@ -153,6 +159,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmPanelExample.resx">
       <DependentUpon>FrmPanelExample.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FrmYScales.resx">
+      <DependentUpon>FrmYScales.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
