First Try Scales

--- a/Apple_24_Zones/App.config
+++ b/Apple_24_Zones/App.config
@@ -25,6 +25,18 @@
             <setting name="CountHeat2" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="YZone2Upper" serializeAs="String">
+                <value>100</value>
+            </setting>
+            <setting name="YZone2Lower" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="YZone1Upper" serializeAs="String">
+                <value>100</value>
+            </setting>
+            <setting name="YZone1Lower" serializeAs="String">
+                <value>0</value>
+            </setting>
         </Apple_24_Zones.Properties.Settings>
     </userSettings>
 </configuration>
